// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`As developer, I can create tag by provided theme and passed styles. with style function 1`] = `
.emotion-0 {
  height: 10px;
  grid-gap: 10px;
}

<div
  className="emotion-0 emotion-1"
>
  Children
</div>
`;

exports[`As developer, I can create tag by provided theme and passed styles. with style object 1`] = `
.emotion-0 {
  height: 10px;
}

<div
  className="emotion-0 emotion-1"
>
  Children
</div>
`;
